--- a/src/main/webapp/events/timeClock/register.xhtml
+++ b/src/main/webapp/events/timeClock/register.xhtml
@@ -6,7 +6,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:cmp="http://ceciliaprado.com.br/cmp">
+                xmlns:stile="http://stile.adrianohrl.tech/tags">
     <ui:define name="content">
         <h:form>
             <p:growl id="messages" showDetail="true" life="#{parametersBean.growlLife}" />  
@@ -30,7 +30,7 @@
                             requiredMessage="Selecione o horário da entrada/saída!!!"
                             converterMessage="Horário com formato errado!!!" locale="pt" />                                
                 
-                <cmp:selectOneEmployee id="employee" employee="#{timeClockEventRegisterBean.timeClockEvent.employee}" />
+                <stile:selectOneEmployee id="employee" employee="#{timeClockEventRegisterBean.timeClockEvent.employee}" />
                 
                 <p:outputLabel for="type" value="Tipo: " style="font-weight: bold;" /> 
                 <p:selectBooleanButton id="type" value="#{timeClockEventRegisterBean.timeClockEvent.arrival}" 
