--- a/src/main/webapp/events/timeClock/search.xhtml
+++ b/src/main/webapp/events/timeClock/search.xhtml
@@ -6,7 +6,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:cmp="http://ceciliaprado.com.br/cmp">
+                xmlns:stile="http://stile.adrianohrl.tech/tags">
     <ui:define name="content">
         <h:form>
             <p:growl id="messages" showDetail="true" life="#{parametersBean.growlLife}" />  
@@ -46,7 +46,7 @@
                             requiredMessage="Selecione o horário final!!!"
                             converterMessage="Horário com formato errado!!!" locale="pt" />                
                 
-                <cmp:selectOneEmployee id="employee" employee="#{timeClockEventsSearchBean.employee}" />
+                <stile:selectOneEmployee id="employee" employee="#{timeClockEventsSearchBean.employee}" />
                 
                 <f:facet name="footer">
                     <p:commandButton value="Consultar" action="#{timeClockEventsSearchBean.search()}" 
