--- a/src/main/webapp/reports/charts/attendance.xhtml
+++ b/src/main/webapp/reports/charts/attendance.xhtml
@@ -6,7 +6,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:cmp="http://ceciliaprado.com.br/cmp">
+                xmlns:stile="http://stile.adrianohrl.tech/tags">
     <ui:define name="content">
         <h:form>
             <p:growl id="messages" autoUpdate="true" showDetail="true" life="#{parametersBean.growlLife}" />  
@@ -37,7 +37,7 @@
                         <p:ajax event="dateSelect"  update="@form:employee" />
                     </p:calendar>           
 
-                    <cmp:selectOneEmployee id="employee" employee="#{attendanceReportBean.employee}" 
+                    <stile:selectOneEmployee id="employee" employee="#{attendanceReportBean.employee}" 
                                            disabled="#{empty attendanceReportBean.endDate}" update="@form:submit" />
 
                     <f:facet name="footer">
