--- a/src/main/webapp/reports/charts/efficiency.xhtml
+++ b/src/main/webapp/reports/charts/efficiency.xhtml
@@ -6,7 +6,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:cmp="http://ceciliaprado.com.br/cmp">
+                xmlns:stile="http://stile.adrianohrl.tech/tags">
     <ui:define name="content">
         <h:form>
             <p:growl id="messages" autoUpdate="true" showDetail="true" life="#{parametersBean.growlLife}" />  
@@ -37,7 +37,7 @@
                         <p:ajax event="dateSelect"  update="@form:subordinate" />
                     </p:calendar>               
                 
-                    <cmp:selectOneEmployee id="subordinate" type="subordinate" 
+                    <stile:selectOneEmployee id="subordinate" type="subordinate" 
                                            employee="#{efficiencyReportBean.employee}"
                                            disabled="#{empty efficiencyReportBean.endDate}" /> 
                     
